[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/BentBr/adventofcode2023"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["advent", "test", "rust", "playground"]
license = "GPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
serde_json = "1.0.107"
